--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "domain": "heatly",
   "name": "Heatly Cloud",
-  "version": "0.2.0",
-  "documentation": "https://github.com/yourrepo",
+  "version": "0.0.1-alpha",
+  "documentation": "https://github.com/ToreAndreRosander/heatly-ha-alpha",
   "dependencies": [],
-  "codeowners": ["@dittnavn"],
+  "codeowners": ["@Rosander"],
   "config_flow": true,
   "iot_class": "cloud_polling",
   "requirements": ["aiohttp", "async_timeout"]
