--- a/custom_components/heatly-alpha/manifest.json
+++ b/custom_components/heatly-alpha/manifest.json
@@ -4,7 +4,7 @@
   "version": "0.0.1-alpha",
   "documentation": "https://github.com/ToreAndreRosander/heatly-ha-alpha",
   "issue_tracker": "https://github.com/ToreAndreRosander/heatly-ha-alpha/issues",
-  "codeowners": ["@Rosander"],
+  "codeowners": ["@ToreAndreRosander"],
   "config_flow": true,
   "iot_class": "cloud_polling",
   "requirements": ["aiohttp", "async_timeout"],
