--- a/custom_components/heatly/manifest.json
+++ b/custom_components/heatly/manifest.json
@@ -7,6 +7,6 @@
   "codeowners": ["@ToreAndreRosander"],
   "config_flow": true,
   "iot_class": "cloud_polling",
-  "requirements": ["aiohttp", "async_timeout"],
+  "requirements": [],
   "dependencies": []
 }
